uing/rawui.nim

## Low level wrapper for libui-ng. 
## 
## Documentation mainly from `ui.h <https://github.com/libui-ng/libui-ng/blob/master/ui.h>`_
## 
## Documentation is only added when neccessary, see `ui.h <https://github.com/libui-ng/libui-ng/blob/master/ui.h>`_
## for documentation
## 
## :Author: Jasmine

when defined(useLibUiDll):
  when defined(windows):
    const
      dllName* = "libui.dll"
  elif defined(macosx):
    const
      dllName* = "libui.dylib"
  else:
    const
      dllName* = "libui.so(|.0)"

  {.pragma: libui, dynlib: dllName.}

elif defined(useLibUiStaticLib):
  when defined(windows):
    const libName* = "libui.lib"
  else:
    const libName* = "libui.a"

  {.passL: libname.}
  {.pragma: libui.}

else:
  {.pragma: libui.}

  when defined(linux):
    from strutils import replace

    const 
      cflags = (staticExec"pkg-config --cflags gtk+-3.0").replace('\L', ' ')
      lflags = (staticExec"pkg-config --libs gtk+-3.0").replace('\L', ' ')

    {.passC: cflags.}
    {.passL: lflags.}

    # add missing linking flags
    when defined(posix) and not defined(genode):
      {.passL: "-lm".}

  {.compile: ("./libui/common/*.c", "common_$#.obj").}

  when defined(windows):
    {.compile: ("./libui/windows/*.cpp", "win_$#.obj").}
    
  elif defined(macosx):
    {.compile: ("./libui/darwin/*.m", "osx_$#.obj").}

    {.passL: "-framework OpenGL".}
    {.passL: "-framework CoreAudio".}
    {.passL: "-framework AudioToolbox".}
    {.passL: "-framework AudioUnit".}
    {.passL: "-framework Carbon".}
    {.passL: "-framework IOKit".}
    {.passL: "-framework Cocoa".}

  else:
    {.compile: ("./libui/unix/*.c", "unix_$#.obj").}

  when defined(windows):
    when defined(gcc):
      {.passL: "-lstdc++".} # gives warnings when passed to linker with clang 

    when defined(clang) or defined(gcc):
      {.passL: "-lwindowscodecs".} # compiling with clang needs this for some reason
      {.passL: "-lwinspool".}
      {.passL: "-lcomdlg32".}
      {.passL: "-ladvapi32".}
      {.passL: "-lshell32".}
      {.passL: "-lole32".}
      {.passL: "-loleaut32".}

      {.passL: "-luuid".}
      {.passL: "-lcomctl32".}
      {.passL: "-ld2d1".}
      {.passL: "-ldwrite".}
      {.passL: "-luxTheme".}
      {.passL: "-lusp10".}
      {.passL: "-lgdi32".}
      {.passL: "-luser32".}
      {.passL: "-lkernel32".}

    when defined(cpu64):
      {.link: "../res/resources.o".} # resources.o is 64-bit
      {.link: "../res/winim64.res".}
    else:
      {.link: "../res/winim32.res".}

  when defined(vcc):
    {.passC: "/EHsc".}
    {.passC: "/wd4312".} # disable warning: 'type cast': conversion from 'int' to 'HMENU' of greater size
 
    {.link: "windowscodecs.lib".}
    {.link: "kernel32.lib".}
    {.link: "user32.lib".}
    {.link: "gdi32.lib".}
    {.link: "winspool.lib".}
    {.link: "comdlg32.lib".}
    {.link: "advapi32.lib".}
    {.link: "shell32.lib".}
    {.link: "ole32.lib".}
    {.link: "oleaut32.lib".}
    {.link: "uuid.lib".}
    {.link: "comctl32.lib".}

    {.link: "d2d1.lib".}
    {.link: "dwrite.lib".}
    {.link: "UxTheme.lib".}
    {.link: "Usp10.lib".}

    {.link: "../res/resources.res".}
    {.link: "../res/winimvcc.res".}

type
  ForEach* {.size: sizeof(cint).} = enum
    ## ForEach represents the return value from one of libui-ng's various ForEach functions.

    ForEachContinue,
    ForEachStop,

  InitOptions* {.bycopy.} = object
    size*: csize_t

when NimMajor < 2:
  {.deadCodeElim: on.}

proc init*(options: ptr InitOptions): cstring {.cdecl, importc: "uiInit", libui.}
proc uninit*() {.cdecl, importc: "uiUninit", libui.}
proc freeInitError*(err: cstring) {.cdecl, importc: "uiFreeInitError", libui.}
proc main*() {.cdecl, importc: "uiMain", libui.}
proc mainSteps*() {.cdecl, importc: "uiMainSteps", libui.}
proc mainStep*(wait: cint): cint {.cdecl, importc: "uiMainStep", libui.}
proc quit*() {.cdecl, importc: "uiQuit", libui.}
proc queueMain*(f: proc (data: pointer) {.cdecl.}; data: pointer) {.cdecl,importc: "uiQueueMain", libui.}

proc timer*(milliseconds: cint; f: proc (data: pointer): cint {.cdecl.}; data: pointer) {.
    cdecl, importc: "uiTimer", libui.}
proc onShouldQuit*(f: proc (data: pointer): cint {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiOnShouldQuit", libui.}
proc freeText*(text: cstring) {.cdecl, importc: "uiFreeText", libui.}

type
  Control* {.inheritable, pure, bycopy.} = object 
    ## Base class for GUI controls providing common methods.
    
    signature*      : uint32
    osSignature*    : uint32
    typeSignature*  : uint32
    destroy*        : proc (a1: ptr Control) {.cdecl.}
    handle*         : proc (a1: ptr Control): int {.cdecl.}
    parent*         : proc (a1: ptr Control): ptr Control {.cdecl.}
    setParent*      : proc (a1: ptr Control; a2: ptr Control) {.cdecl.}
    toplevel*       : proc (a1: ptr Control): cint {.cdecl.}
    visible*        : proc (a1: ptr Control): cint {.cdecl.}
    show*           : proc (a1: ptr Control) {.cdecl.}
    hide*           : proc (a1: ptr Control) {.cdecl.}
    enabled*        : proc (a1: ptr Control): cint {.cdecl.}
    enable*         : proc (a1: ptr Control) {.cdecl.}
    disable*        : proc (a1: ptr Control) {.cdecl.}

template control*(this: untyped): untyped =
  (cast[ptr Control]((this)))

proc controlDestroy*(c: ptr Control) {.cdecl, importc: "uiControlDestroy",
                                   libui.}

proc controlHandle*(c: ptr Control): int {.cdecl, importc: "uiControlHandle",
                                      libui.}

proc controlParent*(c: ptr Control): ptr Control {.cdecl, importc: "uiControlParent",
    libui.}

proc controlSetParent*(c: ptr Control; parent: ptr Control) {.cdecl,
    importc: "uiControlSetParent", libui.}

proc controlToplevel*(c: ptr Control): cint {.cdecl, importc: "uiControlToplevel",
    libui.}

proc controlVisible*(c: ptr Control): cint {.cdecl, importc: "uiControlVisible",
                                        libui.}

proc controlShow*(c: ptr Control) {.cdecl, importc: "uiControlShow", libui.}

proc controlHide*(c: ptr Control) {.cdecl, importc: "uiControlHide", libui.}

proc controlEnabled*(c: ptr Control): cint {.cdecl, importc: "uiControlEnabled",
                                        libui.}

proc controlEnable*(c: ptr Control) {.cdecl, importc: "uiControlEnable",
                                  libui.}

proc controlDisable*(c: ptr Control) {.cdecl, importc: "uiControlDisable",
                                   libui.}

proc allocControl*(n: csize_t; oSsig: uint32; typesig: uint32; typenamestr: cstring): ptr Control {.
    cdecl, importc: "uiAllocControl", libui.}

proc freeControl*(c: ptr Control) {.cdecl, importc: "uiFreeControl", libui.}

proc controlVerifySetParent*(c: ptr Control; parent: ptr Control) {.cdecl,
    importc: "uiControlVerifySetParent", libui.}

proc controlEnabledToUser*(c: ptr Control): cint {.cdecl,
    importc: "uiControlEnabledToUser", libui.}

proc userBugCannotSetParentOnToplevel*(`type`: cstring) {.cdecl,
    importc: "uiUserBugCannotSetParentOnToplevel", libui.}

type
  Window* = object of Control

template window*(this: untyped): untyped =
  (cast[ptr Window]((this)))


proc windowTitle*(w: ptr Window): cstring {.cdecl, importc: "uiWindowTitle",
                                       libui.}

proc windowSetTitle*(w: ptr Window; title: cstring) {.cdecl,
    importc: "uiWindowSetTitle", libui.}

proc windowPosition*(w: ptr Window; x: ptr cint; y: ptr cint) {.cdecl, importc: "uiWindowPosition",
                                       libui.}

proc windowSetPosition*(w: ptr Window; x: cint; y: cint) {.cdecl,
    importc: "uiWindowSetPosition", libui.}

proc windowOnPositionChanged*(w: ptr Window; f: proc (sender: ptr Window;
    senderData: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiWindowOnPositionChanged", libui.}

proc windowContentSize*(w: ptr Window; width: ptr cint; height: ptr cint) {.cdecl,
    importc: "uiWindowContentSize", libui.}

proc windowSetContentSize*(w: ptr Window; width: cint; height: cint) {.cdecl,
    importc: "uiWindowSetContentSize", libui.}

proc windowFullscreen*(w: ptr Window): cint {.cdecl, importc: "uiWindowFullscreen",
    libui.}

proc windowSetFullscreen*(w: ptr Window; fullscreen: cint) {.cdecl,
    importc: "uiWindowSetFullscreen", libui.}

proc windowOnContentSizeChanged*(w: ptr Window; f: proc (sender: ptr Window;
    senderData: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiWindowOnContentSizeChanged", libui.}

proc windowOnClosing*(w: ptr Window; f: proc (sender: ptr Window; senderData: pointer): cint {.
    cdecl.}; data: pointer) {.cdecl, importc: "uiWindowOnClosing", libui.}

proc windowOnFocusChanged*(w: ptr Window; f: proc (sender: ptr Window;
    senderData: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiWindowOnFocusChanged", libui.}

proc windowFocused*(w: ptr Window): cint {.cdecl, importc: "uiWindowFocused",
                                      libui.}

proc windowBorderless*(w: ptr Window): cint {.cdecl, importc: "uiWindowBorderless",
    libui.}

proc windowSetBorderless*(w: ptr Window; borderless: cint) {.cdecl,
    importc: "uiWindowSetBorderless", libui.}

proc windowSetChild*(w: ptr Window; child: ptr Control) {.cdecl,
    importc: "uiWindowSetChild", libui.}

proc windowMargined*(w: ptr Window): cint {.cdecl, importc: "uiWindowMargined",
                                       libui.}

proc windowSetMargined*(w: ptr Window; margined: cint) {.cdecl,
    importc: "uiWindowSetMargined", libui.}

proc windowResizeable*(w: ptr Window): cint {.cdecl, importc: "uiWindowResizeable",
    libui.}

proc windowSetResizeable*(w: ptr Window; resizeable: cint) {.cdecl,
    importc: "uiWindowSetResizeable", libui.}

proc newWindow*(title: cstring; width: cint; height: cint; hasMenubar: cint): ptr Window {.
    cdecl, importc: "uiNewWindow", libui.}

type
  Button* = object of Control

template button*(this: untyped): untyped =
  (cast[ptr Button]((this)))


proc buttonText*(b: ptr Button): cstring {.cdecl, importc: "uiButtonText",
                                      libui.}

proc buttonSetText*(b: ptr Button; text: cstring) {.cdecl, importc: "uiButtonSetText",
    libui.}

proc buttonOnClicked*(b: ptr Button; f: proc (sender: ptr Button; senderData: pointer) {.
    cdecl.}; data: pointer) {.cdecl, importc: "uiButtonOnClicked", libui.}

proc newButton*(text: cstring): ptr Button {.cdecl, importc: "uiNewButton",
                                        libui.}

type
  Box* = object of Control

template box*(this: untyped): untyped =
  (cast[ptr Box]((this)))


proc boxAppend*(b: ptr Box; child: ptr Control; stretchy: cint) {.cdecl,
    importc: "uiBoxAppend", libui.}

proc boxNumChildren*(b: ptr Box): cint {.cdecl, importc: "uiBoxNumChildren",
                                    libui.}

proc boxDelete*(b: ptr Box; index: cint) {.cdecl, importc: "uiBoxDelete", libui.}

proc boxPadded*(b: ptr Box): cint {.cdecl, importc: "uiBoxPadded", libui.}

proc boxSetPadded*(b: ptr Box; padded: cint) {.cdecl, importc: "uiBoxSetPadded",
    libui.}

proc newHorizontalBox*(): ptr Box {.cdecl, importc: "uiNewHorizontalBox",
                                libui.}

proc newVerticalBox*(): ptr Box {.cdecl, importc: "uiNewVerticalBox", libui.}

type
  Checkbox* = object of Control

template checkbox*(this: untyped): untyped =
  (cast[ptr Checkbox]((this)))


proc checkboxText*(c: ptr Checkbox): cstring {.cdecl, importc: "uiCheckboxText",
    libui.}

proc checkboxSetText*(c: ptr Checkbox; text: cstring) {.cdecl,
    importc: "uiCheckboxSetText", libui.}

proc checkboxOnToggled*(c: ptr Checkbox; f: proc (sender: ptr Checkbox;
    senderData: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiCheckboxOnToggled", libui.}

proc checkboxChecked*(c: ptr Checkbox): cint {.cdecl, importc: "uiCheckboxChecked",
    libui.}

proc checkboxSetChecked*(c: ptr Checkbox; checked: cint) {.cdecl,
    importc: "uiCheckboxSetChecked", libui.}
